Updated github file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .container { max-width: 1000px; margin: auto; padding: 20px; }
     .category h2 { border-left: 6px solid #003366; padding-left: 10px; color: #003366; margin-top: 40px; }
     .article { background: white; margin: 20px 0; padding: 15px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    .article img { width: 100%; border-radius: 5px; max-height: 250px; object-fit: cover; }
+    .article img { width: 100%; border-radius: 5px; max-height: 250px; object-fit: contain; }
     .article h3 { margin: 10px 0 5px; font-size: 1.2em; }
     .article p { color: #444; }
     .timestamp { font-size: 0.9em; color: #777; }
